# jni-tools

./: .gitignore  README.md  hatch_build.py  next-phases.md  pyproject.toml  release-plan.md
.github/workflows/: build-test.yml  release-wheels.yml
examples/: regen.py
examples/jni_core/: build_all.py  split-modules.md  split.py
examples/jni_core/admob/: pyproject.toml
examples/jni_core/android/: pyproject.toml
examples/jni_core/android/src/: android.pxd  android.pyx
examples/jni_core/android/src/android/: R.pxd  (+68 more)
examples/jni_core/onesignal/: pyproject.toml  setup.py
examples/pyjnius/admob/: usage.py
examples/pyjnius/android/: README.md  pyproject.toml
examples/pyjnius/android/src/: android.py  android.pyi
examples/pyjnius/onesignal/: usage.py
jni-wrapper/: README.md  swift-java-plan.md  wrap-android-module.md
jni-wrapper/JniWrap/: Package.resolved  Package.swift
jni-wrapper/JniWrap/Sources/CythonEmitter/: CythonClassEmitter.swift  CythonPipeline.swift  CythonPxdEmitter.swift
jni-wrapper/JniWrap/Sources/JniWrap/: JniWrap.swift
jni-wrapper/JniWrap/Sources/JniWrapCore/: Pipeline.swift  PyWrapperEmitter.swift  PyiStubEmitter.swift  Schema.swift
jni-wrapper/JniWrap/Sources/SwiftJavaReflector/: Reflector.swift  SourceParser.swift
jni_core/: .gitignore  README.md  pyproject.toml  setup.py
jni_core/src/jni_core/: __init__.py  _core.c  _core.pyx  _jni_dispatch.h
jni_core/tests/: test_smoke.py
pyjnius-wrapper/: README.md  jni_core-plan.md  swift-java-plan.md
pyjnius-wrapper/PyjniusWrap/: Package.resolved  Package.swift
test-suite/: README.md  conftest.py  pyproject.toml
test-suite/commons_csv/: test_jni_core.py  test_pyjnius.py
(+18917 files in other folders)
